# KilobotArena

./: .gitignore  CMakeLists.txt  CONTRIBUTION.md  ImageBuffer.cpp  ImageBuffer.h  KilobotArena.pro  README.md  ark_install.txt  dragzoomqlabel.cpp  dragzoomqlabel.h  kilobot.cpp  kilobot.h  kilobotcalibrate.h  kilobotcalibrateenv.cpp  kilobotcalibrateenv.h  kilobotidassignment.cpp  kilobotidassignment.h  kilobotoverheadcontroller.h  kilobottracker.cpp  kilobottracker.h  mainwindow.cpp  mainwindow.ui  userthread.cpp  userthread.h
doc/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  calibrate_8cpp.html  calibrate_8h.html  calibrate_8h_source.html  class_calib_window-members.html  class_calib_window.html  class_calib_window.js  class_colour_buffer-members.html  class_colour_buffer.html  class_colour_buffer.js  class_kilo_log-members.html  class_kilo_log.html  class_kilo_log.js  class_kilobot-members.html  class_kilobot.html  class_kilobot.js  class_kilobot_calibrate-members.html  class_kilobot_calibrate.html  class_kilobot_calibrate.js  class_kilobot_calibrate_env-members.html  class_kilobot_calibrate_env.html  class_kilobot_calibrate_env.js  class_kilobot_environment-members.html  class_kilobot_environment.html  class_kilobot_environment.js  class_kilobot_experiment-members.html  class_kilobot_experiment.html  class_kilobot_experiment.js  class_kilobot_i_d_assignment-members.html  class_kilobot_i_d_assignment.html  class_kilobot_i_d_assignment.js  class_kilobot_overhead_controller-members.html  class_kilobot_overhead_controller.html  class_kilobot_overhead_controller.js  class_kilobot_tracker-members.html  class_kilobot_tracker.html  class_kilobot_tracker.js  class_main_window-members.html  (+194 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  (+117 more)
doc/latex/: _r_e_a_d_m_e_8md.tex  annotated.tex  calibrate_8cpp.tex  calibrate_8h.tex  calibrate_8h_source.tex  class_calib_window.eps  class_calib_window.tex  class_colour_buffer.tex  class_kilo_log.tex  class_kilobot.eps  class_kilobot.tex  class_kilobot_calibrate.eps  class_kilobot_calibrate.tex  class_kilobot_calibrate_env.eps  class_kilobot_calibrate_env.tex  class_kilobot_environment.eps  class_kilobot_environment.tex  class_kilobot_experiment.eps  class_kilobot_experiment.tex  class_kilobot_i_d_assignment.eps  class_kilobot_i_d_assignment.tex  class_kilobot_overhead_controller.eps  class_kilobot_overhead_controller.tex  class_kilobot_tracker.eps  class_kilobot_tracker.tex  class_main_window.tex  class_orientation_buffer.tex  class_position_buffer.tex  class_pylon_video_source.eps  class_pylon_video_source.tex  class_serial_connection.tex  class_serial_window.eps  class_serial_window.tex  class_user_thread.eps  class_user_thread.tex  classacquire_thread.eps  classacquire_thread.tex  classclick_signal_q_label.eps  classclick_signal_q_label.tex  classdrag_zoom_q_label.eps  (+66 more)
ohc/: serialconn.cpp
tests/: CMakeLists.txt  ImageBuffer_test.cc
toolchain/: kilobot.cpp
